# System

./: .gitattributes  .gitignore  .gitmodules  .vintrc.yaml  .yamlfmt.yaml  .zshrc  Brewfile  Makefile  README.mkdn  Rakefile.rb  System.code-workspace  Xdefaults  bash_profile  bash_prompt  colours  gitconfig  gitignore  gvimrc  gvimrc.local  icepac  inputrc  irbrc  nanorc  package-lock.json  package.json  profile  profile.local  profile.unprintable  prompt  pyproject.toml  screenrc  selene-vim.toml  selene.toml  shell_colours  shell_prompt  system  tmux.conf  vimrc  vimrc.local  xinitrc  (+1 more)
.config/: ansible-lint.yaml  mise.toml
Anki/: .htmlhintrc  compile-anki-templates.zx.mts
Bootstrap/: Brewfile  Brewfile.frontload  bootstrap-any.sh  bootstrap-macOS.sh  bootstrap.ps1  bootstrap.sh  frontload.brewfile  frontload.ps1  ocaml.sh  rest.brewfile  rest.ps1
Dotfiles/: bash_profile  bash_prompt  colordiffrc  floorc  floorc.json  gitconfig  gitignore  gitk  gvimrc  hyper.js  inputrc  lesskey  nanorc  ocamlinit  prettierrc  profile  profile.local  screenrc.local  shenv  shenv.local.template  ssh-ident  tern-config  tmux.conf  vimrc  zshenv  zshrc
Dotfiles/opam/default-packages/: default-packages.opam
Infrastructure/: AGENTS.md  ansible-playbook.sh  ansible.cfg  eurydice-the-vhp-2c-4gb-intel.jsonc  eurydice-the-vhp-2c-4gb-intel.zx.mjs  hosts.yaml  init-db-as-superuser.sql  playbook.yaml  requirements.yaml  user-data.yaml  vultr-create-instance.zx.mjs  zviadi-the-dbaas-hobbyist-cc-1-25-1.json
MacOSX/: environment.plist
Scripts/: create-safari-webapp.swift  (+2 more)
etc/: bashrc  (+6 more)
(+348 files in other folders)
